fix bug and add function cropp

--- a/src/components/TourDescription/TourDescription.css
+++ b/src/components/TourDescription/TourDescription.css
@@ -100,6 +100,38 @@
     color: #ff6600;
 }
 
+.editTourHeaderBG{
+    position: absolute;
+    z-index: 20;
+    right: 2%;
+    top: 30%;
+    padding: 5px;
+    border-radius: 5px;
+    transition: all 0.4s;
+}
+
+.editTourHeaderBG i{
+    cursor: pointer;
+    color: #fff;
+    padding-left: 25px;
+    background: url(../media/photo-cameraWhite.svg) no-repeat;
+    background-size: 20px 20px;
+    background-position: center left 2px;
+    font-size: 16px;
+    font-weight: 400;
+    font-style: normal;
+    transition: all 0.3s;
+}
+
+
+.editTourHeaderBG i:hover{
+    background-size: 17px 17px;
+}
+
+.editTourHeaderBG:hover{
+    background: #000;
+}
+
 @media (max-width: 900) {}
 
 @media (max-width: 560px) {
